--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "workspaces": [
-        "selfdestruct/selfdestruct",
+        "selfdestruct/contracts",
         "selfdestruct/play"
     ]
 }
