--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "private": true,
-  "workspaces": [
-    "selfdestruct/contracts",
-    "selfdestruct/play",
-    "experiments/contracts",
-    "experiments/play"
-  ],
-  "devDependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "ts-node": "^10.4.0",
-    "typescript": "4.5.5"
-  },
-  "dependencies": {
-    "@ethereumjs/common": "^2.6.0",
-    "@ethereumjs/tx": "^3.4.0",
-    "@openzeppelin/contracts": "^4.4.2",
-    "@truffle/hdwallet-provider": "^2.0.1",
-    "@typechain/ethers-v5": "^9.0.0",
-    "@typechain/web3-v1": "^5.0.0",
-    "@types/bn.js": "^5.1.0",
-    "@types/node": "^17.0.12",
-    "ethereumjs-util": "^7.1.3",
-    "ethereumjs-utils": "^5.2.5",
-    "ethers": "^5.5.3",
-    "original-require": "^1.0.1",
-    "truffle": "^5.4.30",
-    "typechain": "^7.0.0",
-    "web3": "^1.7.0",
-    "web3-utils": "^1.7.0"
-  }
+    "private": true,
+    "workspaces": [
+        "selfdestruct/contracts",
+        "selfdestruct/play",
+        "contract_creation/play"
+    ],
+    "devDependencies": {
+        "@types/fs-extra": "^9.0.13",
+        "ts-node": "^10.4.0",
+        "typescript": "4.5.5"
+    },
+    "dependencies": {
+        "@ethereumjs/common": "^2.6.0",
+        "@ethereumjs/tx": "^3.4.0",
+        "@openzeppelin/contracts": "^4.4.2",
+        "@truffle/hdwallet-provider": "^2.0.1",
+        "@typechain/ethers-v5": "^9.0.0",
+        "@typechain/web3-v1": "^5.0.0",
+        "@types/bn.js": "^5.1.0",
+        "@types/node": "^17.0.12",
+        "ethereumjs-util": "^7.1.3",
+        "ethereumjs-utils": "^5.2.5",
+        "ethers": "^5.5.3",
+        "original-require": "^1.0.1",
+        "truffle": "^5.4.30",
+        "typechain": "^7.0.0",
+        "web3": "^1.7.0",
+        "web3-utils": "^1.7.0"
+    }
 }
